# Quake3Renderer

./: .gitignore  CMakeLists.txt  Quake3Renderer.sln
Debug/: Quake3Renderer.ilk
Libs/: glfw3.lib
Quake3Renderer/: Quake3Renderer.vcxproj  Quake3Renderer.vcxproj.filters  bitstream.c  bitstream.cpp  bitstream.h  bsp.c  bsp.cpp  bsp.h  bsprenderer.c  bsprenderer.cpp  bsprenderer.h  game.c  game.cpp  game.h  glad.c  main.c  main.cpp  matrix.c  matrix.cpp  matrix.h  pk3.c  pk3.h  shaders.c  shaders.cpp  shaders.h  window.c  window.h
Quake3Renderer/Debug/: vc141.idb
Quake3Renderer/Debug/Quake3Renderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Quake3Renderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Camera.h  bsp.h  bsprenderer.h  game.h  matrix.h  pk3.h  shaders.h  transform.h
include/glad/: glad.h
miniz/: miniz_common.h
source/: bsprenderer.cpp  game.cpp  main.cpp  matrix.cpp  pk3.cpp  transform.cpp
